--- a/Über uns.html
+++ b/Über uns.html
@@ -3,180 +3,181 @@
 <html lang="de" dir="ltr">
 
 <head>
-  <link rel="icon" href="neues_logo_transparent_300x300.png">
-  <title>Bikepower - Über uns</title>
-  <link rel="stylesheet" href="style.css">
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="neues_logo_transparent_300x300.png">
+    <title>Bikepower - Über uns</title>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 
-<!-- <div class="wrapper-über-uns"> -->
+    <!-- <div class="wrapper-über-uns"> -->
 
 
-<header>  <!--Im Header ist die Navigationsleiste untergebracht-->
+    <header>
+        <!--Im Header ist die Navigationsleiste untergebracht-->
 
-  <div class="wrapper_header" >
+        <div class="wrapper_header">
 
-  <!-- Das große Bild am Anfang der Seite -->
-  <div class="FrontPicture-Logo">
+            <!-- Das große Bild am Anfang der Seite -->
+            <div class="FrontPicture-Logo">
 
-    <div class="navigation-im-frontpicture">
-      <div class="nav-bar">
-        <div class="nav-container">
-          <div class="brand">
-            <a href="index.html"><img src="neues_logo_transparent_300x300.png"></a>
-          </div>
-          <nav>
-            <div class="nav-mobile"><a id="nav-toggle" href="#"><span></span></a></div>
-            <ul class="nav-list">
-              <li>
-                <a href="index.html">Home</a>
-              </li>
-              <li>
-                <a href="#">Produkte</a>
-                <ul class="nav-dropdown">
-                  <li>
-                    <a href="Produkt.html#standard_variante">Standard</a>
-                  </li>
-                  <li>
-                    <a href="Produkt.html#premium_variante">eDrive 150</a>
-                  </li>
-                  <li>
-                    <a href="Produkt.html#premium_variante_2">eDrive 1000</a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="Kontakt.html">Kontakt</a>
-              </li>
-              <li>
-                <a href="Über uns.html">Über uns</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
+                <div class="navigation-im-frontpicture">
+                    <div class="nav-bar">
+                        <div class="nav-container">
+                            <div class="brand">
+                                <a href="index.html"><img src="neues_logo_transparent_300x300.png"></a>
+                            </div>
+                            <nav>
+                                <div class="nav-mobile"><a id="nav-toggle" href="#"><span></span></a></div>
+                                <ul class="nav-list">
+                                    <li>
+                                        <a href="index.html">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Produkte</a>
+                                        <ul class="nav-dropdown">
+                                            <li>
+                                                <a href="Produkt.html#standard_variante">Standard</a>
+                                            </li>
+                                            <li>
+                                                <a href="Produkt.html#premium_variante">eDrive 150</a>
+                                            </li>
+                                            <li>
+                                                <a href="Produkt.html#premium_variante_2">eDrive 1000</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="Kontakt.html">Kontakt</a>
+                                    </li>
+                                    <li>
+                                        <a href="Über uns.html">Über uns</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
 
-      <script src="query.js"></script>
-      <script src="function.js"></script>
+                    <script src="query.js"></script>
+                    <script src="function.js"></script>
 
-  </div>
+                </div>
 
 
-  </div>
-</header>
+            </div>
+    </header>
     <!--Abschluss des Headerbereichs und der Navigationsleiste-->
 
-    <main>      <!--Hier beginnt der Mainteil der Website-->
-      <div id="main">
+    <main>
+        <!--Hier beginnt der Mainteil der Website-->
+        <div id="main">
 
 
-        <h1 class="separator">So fing alles an </h1>
-        <div class="aboutus">
-          <!-- <h1 class="ueberschrift-aboutus">So fing alles an:</h1> -->
-          <p>Wir sind ein junges Team rund um Gründer und lieben das Radfahren.</p>
-          <p>Wir haben uns auf einer Radtour in der Nähe von Garmisch-Partenkirchen getroffen und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren haben. Um auch größere Touren zusammen absolvieren zu können, hatten wir uns bereits nach
-            Elektrofahrrädern umgesehen. Da wir aber schnell gemerkt haben, dass ein Elektrofahrrad in der Anschaffung sehr teuer ist und wir selbst alle Fahrräder im Besitz hatten, die im sehr guten Zustand waren, wollten wir unsere Fahrräder mit einem Elektroantrieb ausstatten.
-            Nach kurzer Recherche haben wir gemerkt, dass der Markt keine Möglichkeit bietet Fahrräder umzurüsten, daher haben wir uns dazu entschlossen solch einen Antrieb zu entwickeln. </p>
-          <p>Um mit den Protoypen zu beginnen, haben wir unsere erste Produktionsstätte 2011 in Daniels Garage eröffnet.</p>
-          <div class="garage_ueberuns">
-            <img src="garage_ueberuns.jpg" alt="In dieser Garage hat alles begonnen.">
-          </div>
-          <p>Durch die hohe Expertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand,
-            haben wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unseren Traum zur Wirklichkeit machen und das Produkt weiter
-            verbessern. Ein paar Monate später und mit der Hilfe der Löwen konnten wir unser Produkt so fertigstellen wie wir es wollten und Sie es verdienen. Hier sehen Sie das fertige und
-            erprobte Produkt, welches wir Ihnen voller Stolz anbieten können.</p>
+            <h1 class="separator">So fing alles an </h1>
+            <div class="aboutus">
+                <!-- <h1 class="ueberschrift-aboutus">So fing alles an:</h1> -->
+                <p>Wir sind ein junges Team rund um Gründer und lieben das Radfahren.</p>
+                <p>Wir haben uns auf einer Radtour in der Nähe von Garmisch-Partenkirchen getroffen und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren haben. Um auch größere Touren zusammen absolvieren zu können, hatten wir
+                    uns bereits nach Elektrofahrrädern umgesehen. Da wir aber schnell gemerkt haben, dass ein Elektrofahrrad in der Anschaffung sehr teuer ist und wir selbst alle Fahrräder im Besitz hatten, die im sehr guten Zustand waren, wollten wir
+                    unsere Fahrräder mit einem Elektroantrieb ausstatten. Nach kurzer Recherche haben wir gemerkt, dass der Markt keine Möglichkeit bietet Fahrräder umzurüsten, daher haben wir uns dazu entschlossen solch einen Antrieb zu entwickeln. </p>
+                <p>Um mit den Protoypen zu beginnen, haben wir unsere erste Produktionsstätte 2011 in Daniels Garage eröffnet.</p>
+                <div class="garage_ueberuns">
+                    <img src="garage_ueberuns.jpg" alt="In dieser Garage hat alles begonnen.">
+                </div>
+                <p>Durch die hohe Expertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand, haben
+                    wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unseren Traum zur Wirklichkeit machen und das Produkt weiter verbessern.
+                    Ein paar Monate später und mit der Hilfe der Löwen konnten wir unser Produkt so fertigstellen wie wir es wollten und Sie es verdienen. Hier sehen Sie das fertige und erprobte Produkt, welches wir Ihnen voller Stolz anbieten können.</p>
+
+            </div>
+
+            <!-- <h1 class="ueberschrift-aboutus">Das Team:</h1> -->
+
+            <h1 class="separator"> Das Team</h1>
+            <div class="aboutus">
+
+                <div class="employee">
+                    <h2>Management</h2>
+                    <hr>
+                    <h3>Dominik Almus.</h3>
+                    <div class="employee-detail">
+                        <div class="employee-picture">
+                            <img src="dome_600x600.png" alt="Hier sollte eigentlich Dominik sein">
+                        </div>
+                        <div class="employee-text">
+                            <p>Dominik ist nach der Höhle der Löwen zu uns gestoßen. Er hat unsere Idee im Fernsehen gesehen und war direkt begeistert. Er hat sich bei uns gemeldet und wir haben sofort gemerkt, dass wir alle an einem Strang ziehen. Durch
+                                die bereits vorhanden Kenntnisse in der Führung von Unternehmen, hat Dominik die Geschäftsführung übernommen.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="employee">
+                    <h2>Human Ressources</h2>
+                    <hr>
+                    <h3>Luca Zimmermann.</h3>
+                    <div class="employee-detail">
+                        <div class="employee-picture">
+                            <img src="luca_600x600.png" alt="Hier sollte eigentlich Luca sein">
+                        </div>
+                        <div class="employee-text">
+                            <p>Luca ist in unserem Unternehmen für die Mitarbeiter zuständig. Wir haben uns auf die Fahnen geschrieben, dass alle Produkte, die wir erwerben und bei uns weiterverarbeitet werden unter fairen Bedingungen verarbeitet werden.
+                                Natürlich sollen diese fairen Arbeitsbediungen auch für unsere Mitarbeiter gelten. </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="employee">
+                    <h2>International Relationsship Management</h2>
+                    <hr>
+                    <h3>Alvaro Requesens.</h3>
+                    <div class="employee-detail">
+                        <div class="employee-picture">
+                            <img src="alvaro600x600.png" alt="Hier sollte eigentlich Alvaro sein">
+                        </div>
+                        <div class="employee-text">
+                            <p>Alvaro ist seit Anfang an dabei und unser Mann, wenn es um die internationalen Beziehungen geht. Wir produzieren in vielen Ländern auf der Welt. Durch die Tatsache, dass er vier Sprachen fließend spricht und den Blick für das
+                                Wesentliche hat ist er unser Mann, wenn es um die Kommunikation mit Geschäftspartnern weltweit geht. Durch die weiten Händlernetzen und die Produktionsstätten auf der ganzen Welt telefoniert Alvaro nahezu den ganzen Tag
+                                rund um den Globus.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="employee">
+                    <h2>Compliance</h2>
+                    <hr>
+                    <h3>Daniel Werner.</h3>
+                    <div class="employee-detail">
+                        <div class="employee-picture">
+                            <img src="Daniel_Werner.jpg" alt="Hier sollte eigentlich Daniel sein">
+                        </div>
+                        <div class="employee-text">
+                            <p>Daniel ist seit Anfang an dabei und hat Biketails von der Pique auf mitentwickelt. Durch seinen geschulten Blick für alles rund um Compliancethemen nimmt er seit Anfang an diese Funktion ein. Verhandlungen, mit unseren Vertragspartnern
+                                und Prüfung der Verträge stehen bei ihm auf der Tagesordnung.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="employee">
+                    <h2>Customer Relationsship Management</h2>
+                    <hr>
+                    <h3>Maximilian Rampp.</h3>
+                    <div class="employee-detail">
+                        <div class="employee-picture">
+                            <img src="max_600x600.png" alt="Hier sollte eigentlich Max sein">
+                        </div>
+                        <div class="employee-text">
+                            <p>Maximilian ist auch einer der Gründungsmitglieder. Durch den frühen Einstieg in die Firma konnte er bereits einiges an Erfahrung sammeln. Von Anfang an war es Maximilians Aufgabe die Kunden über deren Zurfriedenheit zu befragen
+                                und somit auch weitere Verbesserungen an unserem Produkt vorzunehmen.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
         </div>
-
-          <!-- <h1 class="ueberschrift-aboutus">Das Team:</h1> -->
-
-          <h1 class="separator"> Das Team</h1>
-          <div class="aboutus">
-
-          <div class="employee">
-            <h2>Management</h2>
-            <hr>
-            <h3>Dominik Almus.</h3>
-            <div class="employee-detail">
-              <div class="employee-picture">
-                <img src="Dominik_Almus.jpg" alt="Hier sollte eigentlich Dominik sein">
-              </div>
-              <div class="employee-text">
-                <p>Dominik ist nach der Höhle der Löwen zu uns gestoßen. Er hat unsere Idee im Fernsehen gesehen und war direkt begeistert. Er hat sich bei uns gemeldet und wir haben sofort gemerkt, dass wir alle an einem Strang ziehen. Durch die
-                  bereits vorhanden Kenntnisse in der Führung von Unternehmen, hat Dominik die Geschäftsführung übernommen.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="employee">
-            <h2>Human Ressources</h2>
-            <hr>
-            <h3>Luca Zimmermann.</h3>
-            <div class="employee-detail">
-              <div class="employee-picture">
-                <img src="Luca_Zimmermann.jpg" alt="Hier sollte eigentlich Luca sein">
-              </div>
-              <div class="employee-text">
-                <p>Luca ist in unserem Unternehmen für die Mitarbeiter zuständig. Wir haben uns auf die Fahnen geschrieben, dass alle Produkte, die wir erwerben und bei uns weiterverarbeitet werden unter fairen Bedingungen verarbeitet werden.
-                  Natürlich sollen diese fairen Arbeitsbediungen auch für unsere Mitarbeiter gelten. </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="employee">
-            <h2>International Relationsship Management</h2>
-            <hr>
-            <h3>Alvaro Requesens.</h3>
-            <div class="employee-detail">
-              <div class="employee-picture">
-                <img src="Alvaro_Requesens.jpg" alt="Hier sollte eigentlich Alvaro sein">
-              </div>
-              <div class="employee-text">
-                <p>Alvaro ist seit Anfang an dabei und unser Mann, wenn es um die internationalen Beziehungen geht. Wir produzieren in vielen Ländern auf der Welt. Durch die Tatsache, dass er vier Sprachen fließend spricht und den Blick für das
-                  Wesentliche hat ist er unser Mann, wenn es um die Kommunikation mit Geschäftspartnern weltweit geht. Durch die weiten Händlernetzen und die Produktionsstätten auf der ganzen Welt telefoniert Alvaro nahezu den ganzen Tag rund um den
-                  Globus.</p>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="employee">
-            <h2>Compliance</h2>
-            <hr>
-            <h3 >Daniel Werner.</h3>
-            <div class="employee-detail">
-              <div class="employee-picture">
-                <img src="Daniel_Werner.jpg" alt="Hier sollte eigentlich Daniel sein">
-              </div>
-              <div class="employee-text">
-                <p>Daniel ist seit Anfang an dabei und hat Biketails von der Pique auf mitentwickelt. Durch seinen geschulten Blick für alles rund um Compliancethemen nimmt er seit Anfang an diese Funktion ein. Verhandlungen, mit unseren
-                  Vertragspartnern
-                  und Prüfung der Verträge stehen bei ihm auf der Tagesordnung.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="employee">
-            <h2 >Customer Relationsship Management</h2>
-            <hr>
-            <h3>Maximilian Rampp.</h3>
-            <div class="employee-detail">
-              <div class="employee-picture">
-                <img src="Maximilian_Rampp.jpg" alt="Hier sollte eigentlich Max sein">
-              </div>
-              <div class="employee-text">
-                <p>Maximilian ist auch einer der Gründungsmitglieder. Durch den frühen Einstieg in die Firma konnte er bereits einiges an Erfahrung sammeln. Von Anfang an war es Maximilians Aufgabe die Kunden über deren Zurfriedenheit zu befragen und
-                  somit auch weitere Verbesserungen an unserem Produkt vorzunehmen.</p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-        </div>
-      <!-- </div> -->
+        <!-- </div> -->
 
 
 
@@ -184,7 +185,7 @@
     <!--Hier endet der Main Bereich-->
 
     <div class="pre_footer">
-            <img src="AdobeStock_Footer.svg" alt="">
+        <img src="AdobeStock_Footer.svg" alt="">
     </div>
 
     <footer>
@@ -229,7 +230,7 @@
     <!--Hier endet der Footer Bereich-->
 
 
-  <!--Das ist das Ende des Wrappers-->
+    <!--Das ist das Ende des Wrappers-->
 
 </body>
 
