--- a/Über uns.html
+++ b/Über uns.html
@@ -150,7 +150,7 @@
                     <h3>Daniel Werner.</h3>
                     <div class="employee-detail">
                         <div class="employee-picture">
-                            <img src="Daniel_Werner.jpg" alt="Hier sollte eigentlich Daniel sein">
+                            <img src="daniel_600x600.png" alt="Hier sollte eigentlich Daniel sein">
                         </div>
                         <div class="employee-text">
                             <p>Daniel ist seit Anfang an dabei und hat Biketails von der Pique auf mitentwickelt. Durch seinen geschulten Blick für alles rund um Compliancethemen nimmt er seit Anfang an diese Funktion ein. Verhandlungen, mit unseren Vertragspartnern
