--- a/Kontakt.html
+++ b/Kontakt.html
@@ -3,144 +3,144 @@
 <html lang="de" dir="ltr">
 
 <head>
-  <link rel="icon" href="neues_logo_transparent_300x300.png">
-  <title>Bikepower - Kontakt</title>
-  <link rel="stylesheet" href="style.css">
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="neues_logo_transparent_300x300.png">
+    <title>Bikepower - Kontakt</title>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 
-  <div class="wrapper">
+    <div class="wrapper">
 
 
-    <header>
+        <header>
 
 
-      <!-- Das große Bild am Anfang der Seite -->
-      <div class="FrontPicture-Logo">
-        <div class="navigation-im-frontpicture">
-          <div class="nav-bar">
-            <div class="nav-container">
-              <div class="brand">
-                <a href="index.html"><img src="neues_logo_transparent_300x300.png"></a>
-              </div>
-              <nav>
-                <div class="nav-mobile"><a id="nav-toggle" href="#"><span></span></a></div>
-                <ul class="nav-list">
-                  <li>
-                    <a href="index.html">Home</a>
-                  </li>
-                  <li>
-                    <a href="#">Produkte</a>
-                    <ul class="nav-dropdown">
-                      <li>
-                        <a href="Produkt.html#standard_variante">Standard</a>
-                      </li>
-                      <li>
-                        <a href="Produkt.html#premium_variante">eDrive 150</a>
-                      </li>
-                      <li>
-                        <a href="Produkt.html#premium_variante_2">eDrive 1000</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="Kontakt.html">Kontakt</a>
-                  </li>
-                  <li>
-                    <a href="Über uns.html">Über uns</a>
-                  </li>
-                </ul>
-              </nav>
+            <!-- Das große Bild am Anfang der Seite -->
+            <div class="FrontPicture-Logo">
+                <div class="navigation-im-frontpicture">
+                    <div class="nav-bar">
+                        <div class="nav-container">
+                            <div class="brand">
+                                <a href="index.html"><img src="neues_logo_transparent_300x300.png"></a>
+                            </div>
+                            <nav>
+                                <div class="nav-mobile"><a id="nav-toggle" href="#"><span></span></a></div>
+                                <ul class="nav-list">
+                                    <li>
+                                        <a href="index.html">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Produkte</a>
+                                        <ul class="nav-dropdown">
+                                            <li>
+                                                <a href="Produkt.html#standard_variante">Standard</a>
+                                            </li>
+                                            <li>
+                                                <a href="Produkt.html#premium_variante">eDrive 150</a>
+                                            </li>
+                                            <li>
+                                                <a href="Produkt.html#premium_variante_2">eDrive 1000</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="Kontakt.html">Kontakt</a>
+                                    </li>
+                                    <li>
+                                        <a href="Über uns.html">Über uns</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+
+                    <script src="query.js"></script>
+                    <script src="function.js"></script>
+                </div>
+
             </div>
-          </div>
+    </div>
+    <!--Das ist das Script für die Navigationsleiste-->
 
-          <script src="query.js"></script>
-          <script src="function.js"></script>
-        </div>
-
-      </div>
-  </div>
-  <!--Das ist das Script für die Navigationsleiste-->
-
-  </header>
-  <!--Abschluss des Headerbereichs und der Navigationsleiste-->
+    </header>
+    <!--Abschluss des Headerbereichs und der Navigationsleiste-->
 
 
     <main>
-      <!--Hier beginnt der Mainteil der Website-->
+        <!--Hier beginnt der Mainteil der Website-->
 
-      <div id="main">
-        <div class="contact">
-          <h1>Kontakt</h1>
-          <hr>
-
-
-          <div class="contact-message">
-            <div class="contact-block">
-              <h2>Gibt es noch Fragen?</h2>
-              <br>
-              <p> Sie haben Fragen zum Produkt, zu uns oder unserer Vorgehensweise? Egal ober telefonisch, direkt vor Ort oder per Mail. Wir sind immer für Sie da.</p>
-              <br>
-              <p>Eine Anfahrtsbeschreibung finden Sie weiter unten auf der Seite. Oder klicken Sie einfach <a href="Kontakt.html#gmap_canvas">hier</a>, um direkt dorthin zu gelangen</p>
-              <div class="contact-main">
-                <div class="contact-data">
-                  <div class="contact-description">
-                    <p>Telefonnummer</p>
-                  </div>
-                  <div class="contact-description">
-                    <p>E-Mail</p>
-                  </div>
-                  <div class="contact-description">
-                    <p>WhatsApp-Chat</p>
-                  </div>
-                </div>
-                <div class="contact-data">
-                  <div class="contact-detail">
-                    <p><a href="tel:+49152555666777">0152/555666777</a></p>
-                  </div>
-                  <div class="contact-detail">
-                    <p><a href="mailto:elektro@bikes.de">elektro@bikes.de</a></p>
-                  </div>
-                  <div class="contact-detail">
-                    <p><a href="tel:+49152555666777">0152/555666777</a></p>
-                  </div>
-                </div>
-
-              </div>
-
-            </div>
+        <div id="main">
+            <div class="contact">
+                <h1>Kontakt</h1>
+                <hr>
 
 
-            <div class="message-block">
-              <h2>Wir freuen uns über Ihre Nachricht!</h2>
-              <form>
-                <div class="form-group">
-                  <label>Nachname *</label>
-                  <div class="input">
-                    <input type="text" class="form-control" name="name" placeholder="Mustermann" required="required">
-                  </div>
-                </div>
+                <div class="contact-message">
+                    <div class="contact-block">
+                        <h2>Gibt es noch Fragen?</h2>
+                        <br>
+                        <p> Sie haben Fragen zum Produkt, zu uns oder unserer Vorgehensweise? Egal ober telefonisch, direkt vor Ort oder per Mail. Wir sind immer für Sie da.</p>
+                        <br>
+                        <p>Eine Anfahrtsbeschreibung finden Sie weiter unten auf der Seite. Oder klicken Sie einfach <a href="Kontakt.html#gmap_canvas">hier</a>, um direkt dorthin zu gelangen</p>
+                        <div class="contact-main">
+                            <div class="contact-data">
+                                <div class="contact-description">
+                                    <p>Telefonnummer</p>
+                                </div>
+                                <div class="contact-description">
+                                    <p>E-Mail</p>
+                                </div>
+                                <div class="contact-description">
+                                    <p>WhatsApp-Chat</p>
+                                </div>
+                            </div>
+                            <div class="contact-data">
+                                <div class="contact-detail">
+                                    <p><a href="tel:+49152555666777">0152/555666777</a></p>
+                                </div>
+                                <div class="contact-detail">
+                                    <p><a href="mailto:elektro@bikes.de">elektro@bikes.de</a></p>
+                                </div>
+                                <div class="contact-detail">
+                                    <p><a href="tel:+49152555666777">0152/555666777</a></p>
+                                </div>
+                            </div>
 
-                <div class="form-group">
-                  <label>Vorname *</label>
-                  <div class="input">
-                    <input type="text" class="form-control" name="first_name" placeholder="Max" required="required">
-                  </div>
-                </div>
+                        </div>
 
-                <div class="form-group">
-                  <label>E-Mail Adresse *</label>
-                  <div class="input">
-                    <input type="email" class="form-control" name="email_name" placeholder="max.mustermann@test.de">
-                  </div>
-                </div>
+                    </div>
 
-                <div class="form-group">
-                  <label>Ihr Anliegen</label>
-                  <div class="input">
-                    <select class="form-control" name="issue">
+
+                    <div class="message-block">
+                        <h2>Wir freuen uns über Ihre Nachricht!</h2>
+                        <form>
+                            <div class="form-group">
+                                <label>Nachname *</label>
+                                <div class="input">
+                                    <input type="text" class="form-control" name="name" placeholder="Mustermann" required="required">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Vorname *</label>
+                                <div class="input">
+                                    <input type="text" class="form-control" name="first_name" placeholder="Max" required="required">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label>E-Mail Adresse *</label>
+                                <div class="input">
+                                    <input type="email" class="form-control" name="email_name" placeholder="max.mustermann@test.de">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Ihr Anliegen</label>
+                                <div class="input">
+                                    <select class="form-control" name="issue">
                       <option value="please_select">
                         Bitte wählen
                       </option>
@@ -165,44 +165,45 @@
                         Händlernetz
                       </option>
                     </select>
-                  </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label>Ihre Nachricht *</label>
+                                <div class="input">
+                                    <textarea class="form-control" name="textarea_name" placeholder="" required="required" style="height: 20%;"></textarea>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <input type="submit" class="btn_send_mail" name="button_name" value="Anfrage senden">
+                            </div>
+                        </form>
+                    </div>
+
                 </div>
 
-                <div class="form-group">
-                  <label>Ihre Nachricht *</label>
-                  <div class="input">
-                    <textarea class="form-control" name="textarea_name" placeholder="" required="required" style="height: 20%;"></textarea>
-                  </div>
+                <div class="headquater">
+                    <h1>Hier ist unsere Zentrale</h1>
+                    <hr>
+                    <p>Hier treffen Sie uns an. Unser Hauptquartier haben wir im beschaulichen Heidenheim aufgeschlagen. Wir sind mitten auf dem Campus der Dualen Hochschule in Heidenheim. Durch die Nähe zur Dualen Hochschule Heidenheim können wir wissbegierigen
+                        Jugendlichen eine Spielwiese rund um elektrische Antriebe bieten. So geht die Innovation von morgen!</p>
+                    <p>Wenn Sie möchten, kommen Sie doch auch einfach einmal auf einen Kaffe vorbei. Dann können Sie sich ganz unverbindlich über unsere Produkte informieren und eine Testfahrt mit einem unserer Ausstellungsräder machen.</p>
+                    <div class="mapouter">
+                        <div class="gmap_canvas">
+                            <iframe id="gmap_canvas" src="https://www.google.com/maps/d/embed?mid=10BElz1mrE4Hvw59tto-AfZS3VNt7Ksvq" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                            <a href="https://add-google-map.com"></a>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="form-group">
-                  <input type="submit" class="btn_send_mail" name="button_name" value="Anfrage senden">
-                </div>
-              </form>
             </div>
-
-          </div>
-
-          <div class="headquater">
-            <h1>Hier ist unsere Zentrale</h1>
-            <hr>
-            <p>Hier treffen Sie uns an. Unser Hauptquartier haben wir im beschaulichen Heidenheim aufgeschlagen. Wir sind mitten auf dem Campus der Dualen Hochschule in Heidenheim. Durch die Nähe zur Dualen Hochschule Heidenheim können wir wissbegierigen Jugendlichen eine Spielwiese rund um elektrische Antriebe bieten. So geht die Innovation von morgen!</p>
-            <p>Wenn Sie möchten, kommen Sie doch auch einfach einmal auf einen Kaffe vorbei. Dann können Sie sich ganz unverbindlich über unsere Produkte informieren und eine Testfahrt mit einem unserer Ausstellungsräder machen.</p>
-            <div class="mapouter">
-              <div class="gmap_canvas">
-                <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Marienstra%C3%9Fe%2020,%2089518%20Heidenheim&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                <a href="https://add-google-map.com"></a>
-              </div>
-            </div>
-          </div>
-
         </div>
-      </div>
     </main>
     <!--Hier endet der Main Bereich-->
 
     <div class="pre_footer">
-            <img src="AdobeStock_Footer.svg" alt="">
+        <img src="AdobeStock_Footer.svg" alt="">
     </div>
 
     <footer>
@@ -246,8 +247,8 @@
     </footer>
     <!--Hier endet der Footer Bereich-->
 
-  </div>
-  <!--Das ist das Ende des Wrappers-->
+    </div>
+    <!--Das ist das Ende des Wrappers-->
 
 </body>
 
