Über uns Text zentriert

--- a/Über uns.html
+++ b/Über uns.html
@@ -75,7 +75,7 @@
 
 
             <h1 class="separator">So fing alles an </h1>
-            <div class="aboutus">
+            <div class="aboutus text-center">
                 <!-- <h1 class="ueberschrift-aboutus">So fing alles an:</h1> -->
                 <p>Wir sind ein junges Team rund um Gründer und lieben das Radfahren.</p>
                 <p>Wir haben uns auf einer Radtour in der Nähe von Garmisch-Partenkirchen getroffen und schnell herausgefunden, dass wir alle eine Leidenschaft für das Fahhradfahren haben. Um auch größere Touren zusammen absolvieren zu können, hatten wir
@@ -88,7 +88,6 @@
                 <p>Durch die hohe Expertise, welche im Unternehmen von Anfang an vorhanden war, konnten wir schnell Erfolge erzielen. Da unseren Idee schnell in der Bekannschaft und beim lokalen Fahrradhändler des Vertrauens rasch guten Anklang fand, haben
                     wir uns bei der TV-Show, die Höhle der Löwen beworben. Auch hier hat unsere Idee die Neugier der Investoren geweckt. Durch die weitere Unterstützung konnten wir unseren Traum zur Wirklichkeit machen und das Produkt weiter verbessern.
                     Ein paar Monate später und mit der Hilfe der Löwen konnten wir unser Produkt so fertigstellen wie wir es wollten und Sie es verdienen. Hier sehen Sie das fertige und erprobte Produkt, welches wir Ihnen voller Stolz anbieten können.</p>
-
             </div>
 
             <!-- <h1 class="ueberschrift-aboutus">Das Team:</h1> -->
